# Coding-Practice

./: README.md
Leetcode/: BuyAndSellStock.cpp  TwoSum.cpp
rust_practice/: Cargo.toml
rust_practice/src/: main.rs  storing_books.rs
rust_practice/src/exercises/: health_statistics.rs  mod.rs  points_and_polygons.rs  storing_books.rs
rust_practice/src/practice_problems/: mod.rs  storing_books.rs
rust_practice/src/variables/: main.rs
sensor_serialization/: Cargo.toml  README.md  sensor_readings.csv
sensor_serialization/src/: main.rs  redo_serialization.rs  serialization.rs
