[package]
name = "sensor_serialization"
version = "0.1.0"
edition = "2021"
author = "Marwan Ali"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
rkyv = "0.7.42"
rkyv_derive = "0.7.42"